--- a/supervised_learning/logistic_reg/main.ipynb
+++ b/supervised_learning/logistic_reg/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import datasets\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,21 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = datasets.load_breast_cancer()\n",
-    "X = pd.DataFrame(data.data, columns=data.feature_names)\n",
-    "y = pd.Series(data.target)\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler() # scale features, otherwise the sigmoid function will explode\n",
+    "data = datasets.load_breast_cancer()\n",
+    "X = pd.DataFrame(data.data, columns=data.feature_names)\n",
+    "y = data.target\n",
     "X_scaled = scaler.fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
